# DL-RL-learning-framework

./: .gitignore  MANIFEST.in  Procfile  README.md  project-structure.canvas  pyproject.toml  requirements.txt  setup.py  vercel.json
cpp/: CMakeLists.txt  build.py
cpp/bindings/: pybind11_wrapper.cpp
cpp/include/: activations.h  backprop.h  learning_core.h  matrix.h  optimizers.h
cpp/src/: activations.cpp  backprop.cpp  matrix.cpp  optimizers.cpp
cpp/tests/: CMakeLists.txt
data/: concepts.json
docs/: BETA_TESTING.md  PHASE3_USAGE.md  PHASE4_USAGE.md  QUICKSTART.md  TROUBLESHOOTING.md  USER_GUIDE.md  VERIFICATION_REPORT.md
learning_framework/: __init__.py  cli.py  config.py  cpp_backend.py  errors.py  feedback.py
materials/: index.json
plans/: 2026-01-12-learning-framework-design.md  2026-01-12-phase1-completion-report.md  2026-01-12-phase1-core-infrastructure.md  2026-01-12-phase2-implementation.md  2026-01-12-phase2-learning-assessment-design.md  2026-01-12-phase3-implementation-challenges.md
tests/: test_backend_base.py  test_challenge.py  test_cli.py  test_cli_errors.py  test_cli_feedback.py  test_cli_integration.py  test_cli_learn.py  test_cli_scale.py  test_cli_viz.py  test_concepts.py  test_config.py  test_cost_controller.py  test_cpp_activations.py  test_cpp_backprop.py  test_cpp_matrix.py  test_cpp_optimizers.py  test_data_provider.py  test_errors.py  test_feedback.py  test_gradient_check.py  test_graph_data.py  test_indexer.py  test_integration.py  test_job_packager.py  test_param_explorer.py  test_phase3_integration.py  test_progress.py  (+13 more)
(+85 files in other folders)
